# rldyour-gemini

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  NOTICE  README.md  SECURITY.md  gemini-extension.json  pyproject.toml
.gemini/: settings.json  settings.schema.snapshot.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.serena/: project.yml
agents/: browser-reviewer.md  codebase-investigator.md  gemini-cli-specialist.md  release-reviewer.md  security-reviewer.md
config/: browser-provider-policy.json  current-claim-rules.json  gemini-baseline.json  mcp-runtime-versions.env  project-flow-policy.schema.json  rldyour-contract.json  skill-routing-policy.json
hooks/: after_agent_post_task_sync.sh  hooks.json  session_end_cleanup.sh  session_start_context.sh
policies/: rldyour-browser-routing.toml  rldyour-git-safety.toml  rldyour-project-policy.toml
references/: authentication.md  browser-provider-routing.md  gemini-antigravity-transition.md  gemini-native-boundaries.md  gemini-surface-adoption.md  public-ci-policy.md  release-version-policy.md
scripts/: doctor_system_gemini.sh  gemini_contract.py  install_system_gemini.sh  scan_text_security.py  sync_gemini_projection.py  validate_action_pins.py  validate_antigravity_policy.py  validate_fast.sh  validate_gemini_browser_agent_policy.py  validate_gemini_browser_routing.py  validate_gemini_commands.py  validate_gemini_config.py  validate_gemini_extension_manifest.py  validate_gemini_extension_secret_settings.py  validate_gemini_hooks.py  validate_gemini_mcp_inventory.py  validate_gemini_projection_parity.py  validate_gemini_runtime_baseline.py  validate_gemini_runtime_channel_policy.py  validate_gemini_skills.py  validate_gemini_subagents.py  validate_instruction_docs.py  validate_native_boundaries.py  validate_release.sh  validate_serena_memory_semantics.py
tests/: test_gemini_browser_routing.py  test_gemini_commands.py  test_gemini_hooks.py  test_gemini_manifest.py  (+3 more)
(+68 files in other folders)
